<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qiniu.pili.droid.streaming.demo.ui.CameraPreviewFrameView
        android:id="@+id/cameraPreview_surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <include layout="@layout/focus_indicator" />

    <TextView
        android:id="@+id/log_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_tv_log_info" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/camera_switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cd_btn_camera_switcher"
        android:visibility="gone"
        android:textColor="@color/pldroid_streaming_white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical">

        <include
            layout="@layout/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical">

        <Button
            android:id="@+id/preview_mirror_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_preview_mirror"
            android:text="Mirror\n(Preview)"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/encoding_mirror_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_encoding_mirror"
            android:text="Mirror\n(Encode)"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/pic_streaming_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Picture\nStreaming"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/add_overlay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add\nOverlay"
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="vertical">

        <Button
            android:id="@+id/mix_panel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Audio mix panel"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/orientation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_btn_orientation"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/mute_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_btn_mute"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/fb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_btn_fb"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_btn_capture"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/torch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_btn_torch"
            android:text="@string/flash_light_on"
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/beautyLevel_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:max="100"
        android:visibility="gone"
        android:progress="100" />

    <FrameLayout
        android:id="@+id/board_container"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:id="@+id/ll_feature"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <LinearLayout
            android:id="@+id/ll_effect"
            android:orientation="vertical"
            android:background="@drawable/bg_item_unselect_selector"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_effect"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:text="@string/effect"
                android:textColor="@color/featureboard_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_sticker"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:background="@drawable/bg_item_unselect_selector"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_sticker"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:text="@string/sticker"
                android:textColor="@color/featureboard_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/camera_button_holder"
        android:visibility="gone"/>

    <include
        layout="@layout/audio_mixer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        />

</FrameLayout>
